--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ h2 {
 * {
   margin: 0;
   padding: 0;
+  font-family: Verdana;
+  font-weight: 400;
 }
 /*----------------   Slider  ----------------*/
 .bodySlide {
